# Pac-Man

./: .gitignore  CMakeLists.txt  ignore.gitignore
headers/: collisionManager.h  entity.h  game.h  map.h  object.h  renderer.h  settings.h  textureLoader.h
headers/objects/: objectManager.h
headers/objects/CollisionManager/: collisionManager.h
headers/objects/Entity/: entity.h  entityManager.h  ghost.h  pacman.h
headers/objects/Map/: mapManager.h  structure.h
headers/objects/Map/Dots/: dots.h  dotsManager.h
headers/objects/UI/: UI.h  UIObject.h
headers/renderer/: renderObjectStructure.h  renderer.h
headers/texture/: textureLoader.h  textureManager.h
map/: map1.txt
src/: collisionManager.cpp  entity.cpp  game.cpp  main.cpp  map.cpp  object.cpp  renderer.cpp  textureLoader.cpp
src/objects/: objectManager.cpp
src/objects/Entity/: entity.cpp  entityManager.cpp  ghost.cpp  pacman.cpp
src/objects/Map/: mapManager.cpp  structure.cpp
src/objects/Map/Dots/: dots.cpp  dotsManager.cpp
src/objects/UI/: UI.cpp  UIObject.cpp
src/objects/collisionManager/: collisionManager.cpp
src/renderer/: renderer.cpp
src/texture/: textureLoader.cpp  textureManager.cpp
